// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should show coordinates and empty sign 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-3chxdl{text-align:center;width:1.5em;height:1.5em;border-width:1px;border-style:solid;border-color:#000000;background-color:#ffffff;color:#00008b;}",
      }
    }
    data-emotion="css 3chxdl"
  />,
  <td
    className="css-3chxdl"
    id="id3-4"
    onClick={[Function]}
  >
     
  </td>,
]
`;

exports[`Cell should show coordinates and filled up sign 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-14h0qql{text-align:center;width:1.5em;height:1.5em;border-width:1px;border-style:solid;border-color:#000000;background-color:#00008b;color:#ffffff;}",
      }
    }
    data-emotion="css 14h0qql"
  />,
  <td
    className="css-14h0qql"
    id="id3-4"
    onClick={[Function]}
  >
    X
  </td>,
]
`;
